# stepikfastapi

./: .black  .env  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: config.py  logger.py  main.py  utils.py
app/models/: models.py
